--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.release.release.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_name: test-github-actions
           asset_content_type: application/octet-stream
   build_windows:
@@ -43,7 +43,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.nonexistend }}
+          upload_url: ${{ github.event.upload_url }}
           asset_path: ./target/release/test-github-actions.exe
           asset_name: test-github-actions.exe
           asset_content_type: application-octet-stream
